--- a/feature-staking-impl/src/main/res/layout/view_network_info.xml
+++ b/feature-staking-impl/src/main/res/layout/view_network_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="@color/black"
+    tools:background="@color/blurColor"
     tools:orientation="vertical"
     tools:parentTag="android.widget.LinearLayout">
 
@@ -13,84 +13,58 @@
         style="@style/TextAppearance.NovaFoundation.Body1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:includeFontPadding="false"
         android:padding="16dp"
+        android:text="@string/staking_about"
+        app:drawableEndCompat="@drawable/ic_chevron_up"
+        app:drawableTint="@color/white_48"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Kusama network"
-        tools:textColor="@color/white"
-        app:drawableEndCompat="@drawable/ic_chevron_up" />
+        tools:textColor="@color/white" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/stakingNetworkCollapsibleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:paddingBottom="24dp"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="12dp"
         app:layout_constraintTop_toBottomOf="@id/stakingNetworkInfo">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/stakingStoriesList"
-            android:layout_width="0dp"
+        <io.novafoundation.nova.common.view.TableCellView
+            android:id="@+id/stakingAboutTotalStake"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:overScrollMode="never"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:orientation="horizontal"
-            tools:listitem="@layout/item_staking_story"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <io.novafoundation.nova.feature_staking_impl.presentation.staking.main.view.ShimmeringAmountView
-            android:id="@+id/totalStakeView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toStartOf="@id/minimumStakeView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/stakingStoriesList"
             app:title="@string/staking_total_staked" />
 
-        <io.novafoundation.nova.feature_staking_impl.presentation.staking.main.view.ShimmeringAmountView
-            android:id="@+id/minimumStakeView"
-            android:layout_width="0dp"
+        <io.novafoundation.nova.common.view.TableCellView
+            android:id="@+id/stakingAboutMinimumStake"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/totalStakeView"
-            app:layout_constraintTop_toBottomOf="@id/stakingStoriesList"
             app:title="@string/staking_main_minimum_stake_title" />
 
-        <io.novafoundation.nova.feature_staking_impl.presentation.staking.main.view.ShimmeringAmountView
-            android:id="@+id/activeNominatorsView"
-            android:layout_width="0dp"
+        <io.novafoundation.nova.common.view.TableCellView
+            android:id="@+id/stakingAboutActiveNominators"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            app:useSecondaryValue="false"
-            app:layout_constraintEnd_toStartOf="@id/minimumStakeView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/totalStakeView"
             app:title="@string/staking_main_active_nominators_title" />
 
-        <io.novafoundation.nova.feature_staking_impl.presentation.staking.main.view.ShimmeringAmountView
-            android:id="@+id/lockUpPeriodView"
-            android:layout_width="0dp"
+        <io.novafoundation.nova.common.view.TableCellView
+            android:id="@+id/stakingAboutStakingPeriod"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
-            app:useSecondaryValue="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/totalStakeView"
-            app:layout_constraintTop_toBottomOf="@id/totalStakeView"
+            app:title="@string/staking_staking_period" />
+
+        <io.novafoundation.nova.common.view.TableCellView
+            android:id="@+id/stakingAboutUnstakingPeriod"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:dividerVisible="false"
             app:title="@string/staking_unbonding_period_v1_9_0" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </merge>
