--- a/feature-staking-impl/src/main/res/layout/fragment_staking.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_staking.xml
@@ -56,7 +56,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:expanded="true" />
+            app:expanded="false" />
 
         <io.novafoundation.nova.feature_staking_impl.presentation.view.AlertsView
             android:id="@+id/stakingAlertsInfo"
