--- a/feature-staking-impl/src/main/res/layout/view_network_info.xml
+++ b/feature-staking-impl/src/main/res/layout/view_network_info.xml
@@ -15,7 +15,10 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:includeFontPadding="false"
-        android:padding="16dp"
+        android:paddingTop="14dp"
+        android:paddingBottom="14dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="@string/staking_about"
         app:drawableEndCompat="@drawable/ic_chevron_up"
         app:drawableTint="@color/white_48"
@@ -30,6 +33,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingStart="16dp"
+        android:visibility="gone"
         android:paddingEnd="16dp"
         android:paddingBottom="12dp"
         app:layout_constraintTop_toBottomOf="@id/stakingNetworkInfo">
