--- a/feature-account-impl/src/main/res/layout/fragment_profile.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_profile.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="General" />
+            android:text="@string/settings_general" />
 
         <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView
             android:layout_width="match_parent"
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Preferences" />
+            android:text="@string/settings_preferences" />
 
         <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView
             android:layout_width="match_parent"
@@ -92,7 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Security" />
+            android:text="@string/settings_security" />
 
         <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView
             android:layout_width="match_parent"
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Community" />
+            android:text="@string/settings_community" />
 
         <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView
             android:layout_width="match_parent"
@@ -136,11 +136,11 @@
                 app:title="@string/about_twitter" />
 
             <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsItemView
-                android:id="@+id/settingsRateUs"
+                android:id="@+id/settingsYoutube"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:icon="@drawable/ic_rate_us"
-                app:title="@string/about_rate_app" />
+                app:icon="@drawable/ic_youtube"
+                app:title="@string/settings_youtube" />
         </io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView>
 
         <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupHeaderView
@@ -148,7 +148,36 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="About" />
+            android:text="@string/settings_support" />
+
+        <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
+
+            <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsItemView
+                android:id="@+id/settingsRateUs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/ic_rate_us"
+                app:title="@string/about_rate_app" />
+
+            <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsItemView
+                android:id="@+id/settingsEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/ic_mail_outline"
+                app:title="@string/settings_email" />
+        </io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView>
+
+
+        <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupHeaderView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/about_title" />
 
         <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView
             android:layout_width="match_parent"
@@ -194,10 +223,10 @@
             app:tint="@color/white_48" />
 
         <TextView
+            android:id="@+id/settingsAppVersion"
             style="@style/TextAppearance.NovaFoundation.Footnote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/settingsAppVersion"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:textColor="@color/white_64"
