--- a/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
+++ b/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
@@ -32,13 +32,15 @@
     <ImageView
         android:id="@+id/dappMainWelcomeGroup"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:scaleType="fitXY"
         android:layout_marginEnd="16dp"
         android:adjustViewBounds="true"
         android:src="@drawable/bg_dapp_welcome"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/dappMainWelcomeBottomMargin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dappMainTitle" />
 
@@ -60,21 +62,26 @@
         android:id="@+id/dappMainWelcomeSubtitle"
         style="@style/TextAppearance.NovaFoundation.Footnote"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
         android:gravity="center"
         android:text="@string/dapp_main_welcome_subtitle"
         android:textColor="@color/white_64"
-        app:layout_constraintBottom_toBottomOf="@+id/dappMainWelcomeGroup"
         app:layout_constraintEnd_toEndOf="@id/dappMainWelcomeGroup"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@id/dappMainWelcomeGroup"
         app:layout_constraintTop_toBottomOf="@+id/dappMainWelcomeTitle"
         app:layout_constraintVertical_bias="0.0"
         app:layout_goneMarginBottom="24dp" />
+
+    <Space
+        android:id="@+id/dappMainWelcomeBottomMargin"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        app:layout_constraintStart_toStartOf="@id/dappMainWelcomeSubtitle"
+        app:layout_constraintTop_toBottomOf="@+id/dappMainWelcomeSubtitle" />
 
     <TextView
         android:id="@+id/dappMainExplore"
