Add bottom nav bar divider

--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
 
     <color name="white_8">#14FFFFFF</color>
     <color name="white_10">#1AFFFFFF</color>
+    <color name="white_12">#1FFFFFFF</color>
     <color name="white_16">#29FFFFFF</color>
     <color name="white_20">#33FFFFFF</color>
     <color name="white_24">#3DFFFFFF</color>
