--- a/feature-staking-impl/src/main/res/layout/view_staking_info.xml
+++ b/feature-staking-impl/src/main/res/layout/view_staking_info.xml
@@ -1,40 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:background="@color/black"
     tools:orientation="vertical"
     tools:parentTag="android.widget.LinearLayout">
 
-    <TextView
-        android:id="@+id/stakingInfoTitle"
-        style="@style/TextAppearance.NovaFoundation.Body2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:includeFontPadding="false"
-        android:singleLine="true"
-        android:textColor="@color/gray1"
-        tools:text="Monthly" />
-
-    <TextView
-        android:id="@+id/stakingInfoGain"
-        style="@style/TextAppearance.NovaFoundation.Title3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:includeFontPadding="false"
-        android:layout_marginTop="4dp"
-        android:singleLine="true"
-        android:visibility="gone"
-        android:textColor="@color/green"
-        tools:text="22.12%" />
-
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/stakingInfoGainShimmer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_gravity="center"
         android:visibility="visible">
 
         <View
@@ -44,5 +21,27 @@
             android:background="@drawable/bg_grey_solid_rounded" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
+
+    <TextView
+        android:id="@+id/stakingInfoGain"
+        style="@style/TextAppearance.NovaFoundation.Title3"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:singleLine="true"
+        android:textColor="@color/green"
+        android:visibility="gone"
+        tools:text="22.12%" />
+
+    <TextView
+        android:id="@+id/stakingInfoTitle"
+        style="@style/TextAppearance.NovaFoundation.Body2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="4dp"
+        android:singleLine="true"
+        android:textColor="@color/gray1"
+        tools:text="Monthly" />
 
 </merge>
