--- a/feature-crowdloan-impl/src/main/res/layout/view_referral_flow.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/view_referral_flow.xml
@@ -103,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:actionIcon="@drawable/ic_chevron_right"
-        tools:text="@string/crowdloan_learn"
+        tools:text="@string/crowdloan_learn_v2_2_0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
