--- a/feature-wallet-impl/src/main/res/layout/fragment_choose_recipient.xml
+++ b/feature-wallet-impl/src/main/res/layout/fragment_choose_recipient.xml
@@ -68,7 +68,7 @@
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="96dp"
                 android:gravity="center"
-                android:text="@string/search_recipient_welcome"
+                android:text="@string/search_recipient_welcome_v2_2_0"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -82,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_contact_address" />
+            tools:listitem="@layout/item_contact" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/searchRecipientEmpty"
@@ -112,7 +112,7 @@
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="96dp"
                 android:gravity="center"
-                android:text="@string/wallet_search_empty_title"
+                android:text="@string/wallet_search_empty_title_v2_2_0"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
