--- a/feature-account-impl/src/main/res/layout/fragment_profile.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_profile.xml
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone"
                 app:icon="@drawable/ic_networks_24"
-                app:title="@string/profile_network_title"
+                app:title="@string/connection_management_title"
                 tools:visibility="visible" />
         </io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView>
 
@@ -133,7 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:icon="@drawable/ic_twitter"
-                app:title="@string/about_twitter" />
+                app:title="@string/settings_twitter" />
 
             <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsItemView
                 android:id="@+id/settingsYoutube"
