--- a/feature-staking-impl/src/main/res/layout/view_validator_identity.xml
+++ b/feature-staking-impl/src/main/res/layout/view_validator_identity.xml
@@ -45,7 +45,7 @@
         android:id="@+id/validatorIdentityTwitterView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:validatorInfoItemTitle="@string/identity_twitter_title"
+        app:validatorInfoItemTitle="@string/settings_twitter"
         app:validatorInfoItemIcon="@drawable/ic_chevron_right" />
 
     <io.novafoundation.nova.feature_staking_impl.presentation.validators.details.view.ValidatorInfoItemView
