--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -16,7 +16,6 @@
     <color name="green">#00FF19</color>
     <color name="dividerGray">#444444</color>
     <color name="bottomSheetBackground">#80838383</color>
-    <color name="red">#F00004</color>
     <color name="blurColorDark">#B3000000</color>
     <color name="blurColor">#8C000000</color>
     <color name="blurColorLight">#66000000</color>
@@ -48,7 +47,7 @@
     <color name="account_icon_light">#eeeeee</color>
     <color name="account_icon_dark">@color/black</color>
 
-    <color name="error_red">#FF3B30</color>
+    <color name="red">#FF285C</color>
 
     <color name="accentBlue">#409DF3</color>
 
