--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -203,6 +203,14 @@
             app:popExitAnim="@anim/fragment_close_exit"
             android:id="@+id/action_mainFragment_to_userContributionsFragment"
             app:destination="@id/userContributionsFragment" />
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_mainFragment_to_dappBrowserFragment"
+            app:destination="@id/DAppBrowserFragment" />
     </fragment>
 
 
@@ -883,5 +891,11 @@
         android:id="@+id/userContributionsFragment"
         android:name="io.novafoundation.nova.feature_crowdloan_impl.presentation.contributions.UserContributionsFragment"
         android:label="UserContributionsFragment" />
+
+    <fragment
+        android:id="@+id/DAppBrowserFragment"
+        tools:layout="@layout/fragment_dapp_browser"
+        android:name="io.novafoundation.nova.feature_dapp_impl.presentation.browser.DAppBrowserFragment"
+        android:label="DAppBrowserFragment" />
 
 </navigation>
