* New red * New icons

--- a/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
@@ -105,7 +105,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_basic_circle_star_24" />
+                    android:src="@drawable/ic_nova" />
 
                 <TextView
                     style="@style/TextAppearance.NovaFoundation.Body1"
