--- a/feature-staking-impl/src/main/res/layout/fragment_confirm_stake.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_confirm_stake.xml
@@ -95,7 +95,7 @@
         android:includeFontPadding="false"
         android:text="@string/staking_hint_rewards_format_v2_2_0"
         android:textColor="@color/white"
-        app:drawableLeftCompat="@drawable/ic_reward_24" />
+        app:drawableLeftCompat="@drawable/ic_nova" />
 
     <TextView
         android:id="@+id/confirmStakingUnstakingPeriodLength"
@@ -109,7 +109,7 @@
         android:includeFontPadding="false"
         android:text="@string/staking_hint_unstake_format_v2_2_0"
         android:textColor="@color/white"
-        app:drawableLeftCompat="@drawable/ic_unstake_24" />
+        app:drawableLeftCompat="@drawable/ic_nova" />
 
     <TextView
         style="@style/TextAppearance.NovaFoundation.Body2"
@@ -122,7 +122,7 @@
         android:includeFontPadding="false"
         android:text="@string/staking_hint_no_rewards_v2_2_0"
         android:textColor="@color/white"
-        app:drawableLeftCompat="@drawable/ic_no_reward_24" />
+        app:drawableLeftCompat="@drawable/ic_nova" />
 
     <TextView
         style="@style/TextAppearance.NovaFoundation.Body2"
@@ -135,7 +135,7 @@
         android:includeFontPadding="false"
         android:text="@string/staking_hint_redeem_v2_2_0"
         android:textColor="@color/white"
-        app:drawableLeftCompat="@drawable/ic_arrows_circle_arrow_right_24" />
+        app:drawableLeftCompat="@drawable/ic_nova" />
 
     <Space
         android:layout_width="match_parent"
