--- a/common/src/main/res/layout/view_table_cell.xml
+++ b/common/src/main/res/layout/view_table_cell.xml
@@ -24,11 +24,13 @@
     <TextView
         android:id="@+id/tableCellValuePrimary"
         style="@style/TextAppearance.NovaFoundation.Body1"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constrainedWidth="true"
         android:layout_marginStart="16dp"
         android:ellipsize="middle"
-        android:gravity="end"
+        android:gravity="center_vertical"
         android:includeFontPadding="false"
         android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@id/tableCellValueSecondary"
