--- a/feature-account-impl/src/main/res/layout/fragment_profile.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_profile.xml
@@ -224,7 +224,7 @@
 
         <TextView
             android:id="@+id/settingsAppVersion"
-            style="@style/TextAppearance.NovaFoundation.Footnote"
+            style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
