--- a/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
+++ b/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
@@ -60,7 +60,7 @@
 
     <TextView
         android:id="@+id/dappMainWelcomeSubtitle"
-        style="@style/TextAppearance.NovaFoundation.Footnote"
+        style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
