--- a/common/src/main/res/layout/view_go_next.xml
+++ b/common/src/main/res/layout/view_go_next.xml
@@ -27,6 +27,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="16dp"
+        app:layout_goneMarginStart="16dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
