--- a/common/src/main/res/layout/view_table_cell.xml
+++ b/common/src/main/res/layout/view_table_cell.xml
@@ -16,7 +16,7 @@
         android:layout_marginBottom="16dp"
         android:includeFontPadding="false"
         tools:text="Title"
-        android:textColor="@color/black1"
+        android:textColor="@color/white_64"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
