--- a/feature-dapp-impl/src/main/res/layout/bottom_sheet_confirm_authorize.xml
+++ b/feature-dapp-impl/src/main/res/layout/bottom_sheet_confirm_authorize.xml
@@ -40,7 +40,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/confirmAuthorizeNovaArrow"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_nova_wallet" />
+        tools:src="@drawable/ic_earth" />
 
     <TextView
         android:id="@+id/confirmAuthorizeDappTitle"
