--- a/feature-account-impl/src/main/res/layout/fragment_backup_mnemonic.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_backup_mnemonic.xml
@@ -49,7 +49,7 @@
 
 
     <TextView
-        style="@style/TextAppearance.NovaFoundation.Caption1"
+        style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
