Add dapps shimmering

--- a/feature-dapp-impl/src/main/res/values/styles.xml
+++ b/feature-dapp-impl/src/main/res/values/styles.xml
@@ -10,4 +10,11 @@
     <style name="GoNextTransactionDetailsTextAppearance">
         <item name="android:textColor">@color/white_64</item>
     </style>
+
+    <style name="Widget.Nova.DappCategory.Shimerring" parent="">
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">10dp</item>
+        <item name="android:background">@drawable/bg_shimerring</item>
+        <item name="android:layout_marginEnd">32dp</item>
+    </style>
 </resources>
