--- a/feature-dapp-impl/src/main/res/drawable/dapp_tab_background.xml
+++ b/feature-dapp-impl/src/main/res/drawable/dapp_tab_background.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true">
-        <shape android:shape="rectangle">
-            <corners android:radius="8dp" />
-
-            <solid android:color="@color/white_16" />
-        </shape>
-    </item>
+    <item android:state_selected="true" android:drawable="@drawable/dapp_tab_background_selected"/>
     <item android:drawable="@android:color/transparent" />
 </selector>
