--- a/feature-staking-impl/src/main/res/layout/view_network_info_cell.xml
+++ b/feature-staking-impl/src/main/res/layout/view_network_info_cell.xml
@@ -28,7 +28,7 @@
             android:layout_width="80dp"
             android:layout_height="18dp"
             android:layout_gravity="center"
-            android:background="@drawable/bg_grey_solid_rounded" />
+            android:background="@drawable/bg_shimerring" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
@@ -54,7 +54,7 @@
             android:layout_width="58dp"
             android:layout_height="12dp"
             android:layout_gravity="center"
-            android:background="@drawable/bg_grey_solid_rounded" />
+            android:background="@drawable/bg_shimerring" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
