--- a/feature-staking-impl/src/main/res/layout/view_stake_summary.xml
+++ b/feature-staking-impl/src/main/res/layout/view_stake_summary.xml
@@ -90,7 +90,7 @@
             android:layout_width="180dp"
             android:layout_height="24dp"
             android:layout_gravity="center"
-            android:background="@drawable/bg_grey_solid_rounded" />
+            android:background="@drawable/bg_shimerring" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
@@ -107,7 +107,7 @@
             android:layout_width="120dp"
             android:layout_height="18dp"
             android:layout_gravity="center"
-            android:background="@drawable/bg_grey_solid_rounded" />
+            android:background="@drawable/bg_shimerring" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
@@ -126,7 +126,7 @@
             android:layout_width="180dp"
             android:layout_height="24dp"
             android:layout_gravity="center"
-            android:background="@drawable/bg_grey_solid_rounded" />
+            android:background="@drawable/bg_shimerring" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
