--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -45,7 +45,7 @@
 
     <!-- Regular -->
 
-    <style name="TextAppearance.NovaFoundation.Regular" parent="TextAppearance.AppCompat.Title">
+    <style name="TextAppearance.NovaFoundation.Regular" parent="">
         <item name="android:fontFamily">?attr/fontRegular</item>
     </style>
 
